fix: align inputs

--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ section {
   border-bottom-right-radius: 50px;
 }
 
-
 .logo {
   display: block;
   margin: 2em auto;
@@ -105,12 +104,10 @@ input[type="radio"] {
   display: block;
 }
 
-
 .height,
 .weight {
   display: flex;
   flex-direction: column;
-  margin: 1.5em 0;
   position: relative;
 }
 
